Fixed scrollbar styling on Firefox (not webkit)

--- a/src/app/admin/editor/page/pageEditor.module.scss
+++ b/src/app/admin/editor/page/pageEditor.module.scss
@@ -147,6 +147,9 @@
         background-clip: padding-box;
         background-color: #66acf7;
     }
+
+    scrollbar-width: thin;
+    scrollbar-color: #66acf7 #e4e4e4;
 }
 
 .blockArea {
